[package]
name = "ip_network"
version = "0.1.2"
authors = ["Jakub Onderka <ahoj@jakubonderka.cz>"]
license = "BSD-2-Clause"
keywords = ["ip", "ipv4", "ipv6", "network", "address"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "README.md"
repository = "https://github.com/JakubOnderka/ip_network"
homepage = "https://github.com/JakubOnderka/ip_network"
documentation = "https://docs.rs/ip_network"
description = """
IPv4 and IPv6 network structs.
"""

[badges]
travis-ci = { repository = "JakubOnderka/ip_network" }
coveralls = { repository = "JakubOnderka/ip_network" }

[dependencies.extprim]
version = "~1.4"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.postgres]
version = "0.15"
optional = true

[dependencies.diesel]
version = "1.0.0"
optional = true
features = ["postgres"]

[features]
default = []