[package]
name = "ip_network"
version = "0.3.4"
authors = ["Jakub Onderka <ahoj@jakubonderka.cz>"]
license = "BSD-2-Clause"
keywords = ["ip", "ipv4", "ipv6", "network", "address"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "README.md"
repository = "https://github.com/JakubOnderka/ip_network"
homepage = "https://github.com/JakubOnderka/ip_network"
documentation = "https://docs.rs/ip_network"
description = """
IPv4 and IPv6 network structs.
"""
edition = "2018"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "JakubOnderka/ip_network" }
coveralls = { repository = "JakubOnderka/ip_network" }

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.postgres]
version = "0.15"
optional = true

[dependencies.diesel]
version = "1.0.0"
optional = true
features = ["postgres"]

[dev-dependencies.serde_test]
version = "1.0"

[dev-dependencies.criterion]
version = "0.2.9"

[package.metadata.docs.rs]
features = ["serde", "postgres", "diesel"]

[[bench]]
name = "benchmark"
harness = false
